----                                  OpenMS 1.5                                      ----
------------------------------------------------------------------------------------------

Main improvements of TOPPView:

Main improvements of TOPP:
- Made mzML 1.1.0 the default format for all TOPP tools
- Added data processing information to all output files to improve tracability
- FileInfo: added flag for data processing output

Main improvements of OpenMS C++ library:
- mzML 1.1.0 support

Changes to OpenMS XML formats:

Detailed list of changes to specific OpenMS classes
- New classes
- Removed classes
  - FeatureFinderAlgorithmWatershed
  - PeakIcon
  - FactoryProduct (replaced by DefaultParamHandler)
  - DSpectrum (all the functionalty was moved to MSSpectrum)
- Renamed and moved classes
  - Moved PersistentObject from FORMAT/ to FORMAT/DB/
- Changes to Classes
  - DataValue: added constructor for std::string and QString
  - MetaInfo: setValue method takes only DataValue now
  - MetaInfoInterface: setMetaValue method takes only DataValue now
  - Param: setValue method takes only DataValue now
  - ExperimentalSettings: Moved DataProcessing to SpectrumSettings (for mzML)
  - Precursor: supports multiple dissociation methods now (for mzML)
  - MetaInfoDescription: removed comment and source file; added data processing (for MzML)
	- ElementDB: Isotopes are now possible
	- EmpiricalFormula: Isotopes are now possible (e.g. (2)HO for deuterium)

Changes to the contrib package:
- Added CoinMP 1.3.3

Bug fixes:
- [2778461]: mzData files containing 'supDataArray' elements no longer crash OpenMS 
- [2777173]: TOPPView 2D view projections no longer forget the draw mode on repaint
- [2776386]: TOPPView snap-to-max intensity mode no longer crashes with empty spectra
- [2775912]: PeakPickerCWT no longer assigns RT=-1 to MS/MS spectra

------------------------------------------------------------------------------------------